--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Hello App Display Name</string>
+    <string name="app_name">get_music_files_v3_dev</string>
 </resources>
